// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingCard Clickable should render - 0 value 1`] = `
<DocumentFragment>
  <a
    href="/some-target"
  >
<<<<<<< HEAD
    <Clickable
      onClick={[MockFunction]}
      target="some-target"
      value={0}
    >
      <Link
        to="localhost:3000/example/path/some-target"
      >
        <a
          href="localhost:3000/example/path/some-target"
        >
          None
        </a>
      </Link>
    </Clickable>
  </Router>
</MemoryRouter>
=======
    None
  </a>
</DocumentFragment>
>>>>>>> f3af141 (chore(Cards): Convert tests to testing-library)
`;

exports[`LoadingCard Clickable should render - no data 1`] = `
<DocumentFragment>
  <a
    href="/undefined"
  >
<<<<<<< HEAD
    <Clickable
      onClick={[MockFunction]}
    >
      <Link
        to="localhost:3000/example/path/undefined"
      >
        <a
          href="localhost:3000/example/path/undefined"
        >
          Not available
        </a>
      </Link>
    </Clickable>
  </Router>
</MemoryRouter>
=======
    Not available
  </a>
</DocumentFragment>
>>>>>>> f3af141 (chore(Cards): Convert tests to testing-library)
`;

exports[`LoadingCard Loading card render - isLoading: false 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Card that is loaded
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        />
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`LoadingCard Loading card render - isLoading: true 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Card that is loading
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        />
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`LoadingCard Loading card render 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Some title
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        >
          <div
            class="pf-c-content"
          >
            <dl
              class=""
            >
              <dt
                class=""
                data-ouia-component-id="test-title title"
              >
                test-title
              </dt>
              <dd
                class=""
                data-ouia-component-id="test-title value"
              >
                <div>
                  <a
                    href="/undefined"
                  >
<<<<<<< HEAD
                    <div
                      className="pf-l-stack__item pf-m-fill"
                    >
                      <TextContent>
                        <div
                          className="pf-c-content"
                        >
                          <TextList
                            component="dl"
                          >
                            <dl
                              className=""
                            >
                              <TextListItem
                                component="dt"
                                data-ouia-component-id="test-title title"
                              >
                                <dt
                                  className=""
                                  data-ouia-component-id="test-title title"
                                >
                                  test-title
                                </dt>
                              </TextListItem>
                              <TextListItem
                                component="dd"
                                data-ouia-component-id="test-title value"
                              >
                                <dd
                                  className=""
                                  data-ouia-component-id="test-title value"
                                >
                                  <div>
                                    <Clickable
                                      onClick={[MockFunction]}
                                      value="some value"
                                    >
                                      <Link
                                        to="localhost:3000/example/path/undefined"
                                      >
                                        <a
                                          href="localhost:3000/example/path/undefined"
                                        >
                                          some value
                                        </a>
                                      </Link>
                                    </Clickable>
                                  </div>
                                </dd>
                              </TextListItem>
                              <TextListItem
                                component="dt"
                                data-ouia-component-id="just title title"
                              >
                                <dt
                                  className=""
                                  data-ouia-component-id="just title title"
                                >
                                  just title
                                </dt>
                              </TextListItem>
                              <TextListItem
                                component="dd"
                                data-ouia-component-id="just title value"
                              >
                                <dd
                                  className=""
                                  data-ouia-component-id="just title value"
                                >
                                  Not available
                                </dd>
                              </TextListItem>
                            </dl>
                          </TextList>
                        </div>
                      </TextContent>
                    </div>
                  </StackItem>
=======
                    some value
                  </a>
>>>>>>> f3af141 (chore(Cards): Convert tests to testing-library)
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="just title title"
              >
                just title
              </dt>
              <dd
                class=""
                data-ouia-component-id="just title value"
              >
                Not available
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`LoadingCard should render loading bars 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Some title
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        >
          <div
            class="pf-c-content"
          >
            <dl
              class=""
            >
              <dt
                class=""
                data-ouia-component-id="test-title title"
              >
                test-title
              </dt>
              <dd
                class=""
                data-ouia-component-id="test-title value"
              >
                <div
                  class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__md"
                >
                  <span
                    class="pf-u-screen-reader"
                  />
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="just title title"
              >
                just title
              </dt>
              <dd
                class=""
                data-ouia-component-id="just title value"
              >
                <div
                  class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-u-screen-reader"
                  />
                </div>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;
